# weeapps

./: .gitlab-ci.yml  README.md  docker-compose.yml
backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/playground/: admin.py  consumers.py  models.py
backend/playground/migrations/: 0001_initial.py  0002_remove_note_does_expire.py
backend/weeapps/: routing.py  urls.py  wsgi.py
backend/weeapps/settings/: base.py  prod.py
frontend/: Dockerfile  README.md  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Counter.vue  Main.vue  Notes.vue  UserCount.vue
frontend/src/components/Counter/: NumberDisplay.vue  ResetButton.vue
frontend/src/components/Notes/: Note.vue  NoteAddElement.vue  config.js
