[tool.poetry]
name = "weeapps"
version = "0.1.0"
description = ""
authors = ["Max Wittig <max.wittig95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2.5"
channels = "^2.3.0"
channels_redis = "^2.4.0"
redis = "^3.3.8"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
